--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -3038,6 +3038,7 @@ p.stick-next a{
 .psignup-form i.fa-2x {
     font-size: 1.5em;
     font-weight: 400;
+    cursor:pointer;
 }
 ul.stick-next-uo.list-inline {
     padding-top: 15px;
