--- a/app/themes/addiction/css/custom.css
+++ b/app/themes/addiction/css/custom.css
@@ -3166,3 +3166,21 @@ z-index: 9999;
 .update-ads .ads-block{
   margin: 10px 0;
 }
+
+/*FOr shake*/
+@keyframes shake {
+  0%, 100% {transform: translateX(0);}
+  20%, 60% {transform: translateX(-8px);}
+  40%, 80% {transform: translateX(8px);}
+}
+
+.animated-shake {
+  animation: shake .5s;
+}
+
+.shake {
+	-webkit-animation-name: shake;
+	-webkit-animation-duration: 0.5s;
+	-webkit-transform-origin:50% 50%;
+	-webkit-animation-timing-function: linear;
+}
